--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
     <mybatis.version>3.3.0</mybatis.version>
     <mybatis.spring.version>1.2.3</mybatis.spring.version>
     <mysql.version>5.1.37</mysql.version>
+    <commons-dbcp.version>1.2.2</commons-dbcp.version>
     <servlet.api.version>3.1.0</servlet.api.version>
     <jsp.api.version>2.3.1</jsp.api.version>
   </properties>
@@ -156,6 +157,13 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>${mysql.version}</version>
     </dependency>
+    <!-- 导入dbcp的jar包，用来在applicationContext.xml中配置数据库 -->
+    <dependency>
+      <groupId>commons-dbcp</groupId>
+      <artifactId>commons-dbcp</artifactId>
+      <version>${commons-dbcp.version}</version>
+    </dependency>
+    <!--fileupload-->
     <dependency>
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
