--- a/src/main/resources/conf/log4j.properties
+++ b/src/main/resources/conf/log4j.properties
@@ -16,7 +16,7 @@ log4j.appender.logFile.layout.ConversionPattern=  %d %p [%c] - %m%n
 log4j.appender.logFile.Threshold= DEBUG
 log4j.appender.logFile.ImmediateFlush= TRUE
 log4j.appender.logFile.Append= TRUE
-log4j.appender.logFile.File= ../logs/ssm.log
+log4j.appender.logFile.File= ../logs/bhz.log
 log4j.appender.logFile.Encoding= UTF-8
 
 #\u6309DatePattern\u8F93\u51FA\u5230\u6587\u4EF6
@@ -26,7 +26,7 @@ log4j.appender.logDailyFile.layout.ConversionPattern=  %d %p [%c] - %m%n
 log4j.appender.logDailyFile.Threshold= DEBUG
 log4j.appender.logDailyFile.ImmediateFlush= TRUE
 log4j.appender.logDailyFile.Append= TRUE
-log4j.appender.logDailyFile.File= ../logs/DatePatternSsm.log
+log4j.appender.logDailyFile.File= ../logs/BhzPattern.log
 log4j.appender.logDailyFile.DatePattern= '.'yyyy-MM-dd-HH-mm'.log'
 log4j.appender.logDailyFile.Encoding= UTF-8
 
