--- a/src/main/resources/conf/log4j.properties
+++ b/src/main/resources/conf/log4j.properties
@@ -26,7 +26,7 @@ log4j.appender.logDailyFile.layout.ConversionPattern=  %d %p [%c] - %m%n
 log4j.appender.logDailyFile.Threshold= DEBUG
 log4j.appender.logDailyFile.ImmediateFlush= TRUE
 log4j.appender.logDailyFile.Append= TRUE
-log4j.appender.logDailyFile.File= ../logs/BhzPattern.log
+log4j.appender.logDailyFile.File= ../logs/DatePatternBhz.log
 log4j.appender.logDailyFile.DatePattern= '.'yyyy-MM-dd-HH-mm'.log'
 log4j.appender.logDailyFile.Encoding= UTF-8
 
